# eventkit-rs

./: CHANGELOG.md  Cargo.toml  EKCalender.md  Info.plist  README.md  ci-check.sh
.config/: nextest.toml
.github/workflows/: ci.yml
EKCalender/: EKCalendarType.md
src/: app.rs  imp.rs  main.rs  mcp.rs
tests/: live_eventkit_events.rs  mcp_smoke.rs
